# alzheimer-openenv

./: .gitignore  AlzheimerEnvUI.jsx  Dockerfile  README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate_submission.py
frontend/src/: App.jsx  index.css
graders/: __init__.py  grader1.py  grader2.py  grader3.py
server/: app.py
static/: index.html
static/assets/: index-DXFdSvcN.js
tasks/: __init__.py  task1_classify.py  task2_biomarker.py  task3_intervene.py
